<resources>
    <string name="app_name">Adrift</string>
    <string name="description">This bedtime sleep meditation uses deep breathing, mindfulness, and body scan techniques to help you relax, calm the mind and body, and wind down for the day so you can ease gently into sleep.</string>
    <string name="relax">Relax</string>
    <string name="calm_your_mind">Calm your Mind</string>
    <string name="breathe">4-7-8 Breathing</string>
    <string name="sounds_of_nature">Sounds of Nature</string>
    <string name="image">image</string>
    <string name="guide">Guide</string>
    <string name="for_a_good_night_s_sleep">For a Good Night\'s Sleep</string>
    <string name="tips_for_sleep">Tips for Sleep</string>
    <string name="audio_guide">Audio Guide</string>
    <string name="todo">TODO</string>
    <string name="bookimage">bookimage</string>
    <string name="audio_image">audio image</string>
    <string name="go_to_sleep">Go To Sleep</string>
    <string name="credits">Credits</string>
    <string name="sound_and_music">Sound and music</string>
    <string name="animation">Animation</string>
    <string name="images">Images</string>
    <string name="icons">Icons</string>
    <string name="sleep_meditation_audio">Sleep meditation audio</string>
    <string name="onboarding_screen">Onboarding screen</string>
    <string name="resource_credits">Resource Credits</string>
    <string name="visit">For more information on the 4-7-8 breathing technique, visit https://www.medicalnewstoday.com/articles/324417</string>

</resources>