<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreditsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar2"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:background="#00FFFFFF"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme" />

            <ImageView
                android:id="@+id/backbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/arrow" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/resource_credits"

                android:textAlignment="center"
                android:textSize="34sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="304dp"
                android:layout_height="248dp"
                android:contentDescription="back"
                app:srcCompat="@drawable/credits" />

            <TextView
                android:id="@+id/textView40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="All resources belong to their rightful owners." />

            <TextView
                android:id="@+id/textView41"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sound_and_music"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="https://soundbible.com/free-sound-effects-1.html"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" https://www.zapsplat.com"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="https://openchurch.com/"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/animation"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lottiefiles.com"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/images"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="https://www.manypixels.co/gallery"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/icons"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="https://www.flaticon.com/ "
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="https://icons8.com/"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sleep_meditation_audio"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="https://www.helpguide.org/meditations/bedtime-meditation-for-sleep.html"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/onboarding_screen"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="www.ramotion.com"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView36"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sleep tips"
                android:textAlignment="center"

                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="https://www.healthhub.sg/live-healthy/510/sleep"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="https://www.mayoclinic.org/healthy-lifestyle/adult-health/in-depth/sleep/art-20048379"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView43"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="4-7-8 Breathing Exercise" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/visit"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/textView39"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView38"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="This app is developed by a student as an assignment for partial fulfillment of the coursework of Mobile Applications Development 2021" />

            <TextView
                android:id="@+id/textView42"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="For feedback/issues, contact: adrift273@gmail.com"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>